--- a/Views/Shared/_UserAnswersPartial.cshtml
+++ b/Views/Shared/_UserAnswersPartial.cshtml
@@ -6,56 +6,78 @@
 @inject IStringLocalizer<SharedResources> localizer
 @model Form
 
-<div class="container mt-5">
-    <h2>@Model.Template.Title</h2>
-    <p><strong>@localizer["SubmittedAt"]:</strong> @Model.SubmittedAt.ToString("g")</p>
-    <h3>@localizer["Answers"]</h3>
-    <div id="answers-container" data-form-Id="@Model.Id" class="list-group">
-        @foreach (var pair in Model.Answers)
-        {
-            <div class="list-group-item">
-                <div class="mb-2">
-                    <label class="form-label fw-bold">@pair.Question.Title</label>
-                    <p class="fst-italic">@pair.Question.Description</p>
-                </div>
-                <div>
-                    @switch (pair)
+<!DOCTYPE html>
+<html lang="en" data-bs-theme="light">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - CourseProject</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/CourseProject.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" />
+</head>
+
+<body>
+    <div class="container-fluid" id="main-content">
+        <main role="main" class="pb-3">
+            <div class="container mt-5">
+                <h2>@Model.Template.Title</h2>
+                <p><strong>@localizer["SubmittedAt"]:</strong> @Model.SubmittedAt.ToString("g")</p>
+                <h3>@localizer["Answers"]</h3>
+                <div id="answers-container" data-form-Id="@Model.Id" class="list-group">
+                    @foreach (var pair in Model.Answers)
                     {
-                        case TextAnswer textAnswer:
-                            <textarea data-id="@textAnswer.Id" data-type="TextAnswer" class="form-control" disabled readonly>@textAnswer.TextAnswerValue</textarea>
-                            break;
-                        case IntegerAnswer integerAnswer:
-                            <input data-id="@integerAnswer.Id" data-type="Integer" type="number" class="form-control" value="@integerAnswer.IntegerAnswerValue" disabled readonly />
-                            break;
-                        case CheckboxAnswer checkboxAnswer:
-                            if (checkboxAnswer.CheckboxAnswerValue == false)
-                            {
-                                <input data-id="@checkboxAnswer.Id" data-type="Checkbox" type="checkbox" class="form-check-input mt-0" value="false" disabled readonly />
-                            }
-                            else
-                            {
-                                <input data-id="@checkboxAnswer.Id" data-type="Checkbox" type="checkbox" class="form-check-input mt-0" value="false" checked disabled readonly />
-                            }
-                            break;
-                        default:
-                            {
-                                switch (pair.Question.Type)
+                        <div class="list-group-item">
+                            <div class="mb-2">
+                                <label class="form-label fw-bold">@pair.Question.Title</label>
+                                <p class="fst-italic">@pair.Question.Description</p>
+                            </div>
+                            <div>
+                                @switch (pair)
                                 {
-                                    case QuestionType.SingleLineText | QuestionType.MultiLineText:
-                                        <textarea data-question-id="@pair.Question.Id" data-type="TextAnswer" class="form-control" disabled readonly></textarea>
+                                    case TextAnswer textAnswer:
+                                        <textarea data-id="@textAnswer.Id" data-type="TextAnswer" class="form-control" disabled readonly>@textAnswer.TextAnswerValue</textarea>
                                         break;
-                                    case QuestionType.Integer:
-                                        <input data-question-id="@pair.Question.Id" data-type="Integer" type="number" class="form-control" disabled readonly />
+                                    case IntegerAnswer integerAnswer:
+                                        <input data-id="@integerAnswer.Id" data-type="Integer" type="number" class="form-control" value="@integerAnswer.IntegerAnswerValue" disabled readonly />
                                         break;
-                                    case QuestionType.Checkbox:
-                                        <input data-question-id="@pair.Question.Id" data-type="Checkbox" type="checkbox" class="form-check-input mt-0" value="false" disabled readonly />
+                                    case CheckboxAnswer checkboxAnswer:
+                                        if (checkboxAnswer.CheckboxAnswerValue == false)
+                                        {
+                                            <input data-id="@checkboxAnswer.Id" data-type="Checkbox" type="checkbox" class="form-check-input mt-0" value="false" disabled readonly />
+                                        }
+                                        else
+                                        {
+                                            <input data-id="@checkboxAnswer.Id" data-type="Checkbox" type="checkbox" class="form-check-input mt-0" value="false" checked disabled readonly />
+                                        }
+                                        break;
+                                    default:
+                                        {
+                                            switch (pair.Question.Type)
+                                            {
+                                                case QuestionType.SingleLineText | QuestionType.MultiLineText:
+                                                    <textarea data-question-id="@pair.Question.Id" data-type="TextAnswer" class="form-control" disabled readonly></textarea>
+                                                    break;
+                                                case QuestionType.Integer:
+                                                    <input data-question-id="@pair.Question.Id" data-type="Integer" type="number" class="form-control" disabled readonly />
+                                                    break;
+                                                case QuestionType.Checkbox:
+                                                    <input data-question-id="@pair.Question.Id" data-type="Checkbox" type="checkbox" class="form-check-input mt-0" value="false" disabled readonly />
+                                                    break;
+                                            }
+                                        }
                                         break;
                                 }
-                            }
-                            break;
+                            </div>
+                        </div>
                     }
                 </div>
             </div>
-        }
+        </main>
     </div>
-</div>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+</body>
+</html>
