--- a/Views/Form/ViewAnswer.cshtml
+++ b/Views/Form/ViewAnswer.cshtml
@@ -7,7 +7,7 @@
 @model ViewAnswerViewModel
 
 <div class="container mt-5">
-    <h2>@Model.Template.Title</h2>
+    <h2>@localizer["Template"]: @Model.Template.Title</h2>
     <h5>@localizer["User"]: @Model.Form.User.UserName</h5>
     <p><strong>@localizer["SubmittedAt"]:</strong> @Model.SubmittedAt.ToString("g")</p>
     <div class="d-inline-block">
