--- a/Views/Template/Index.cshtml
+++ b/Views/Template/Index.cshtml
@@ -28,7 +28,7 @@
         <thead>
             <tr>
                 <th>
-                    <a asp-controller="Template" asp-action="Index" asp-route-sortColumn="Title" asp-route-sortOrder="@(Model.SortOrder == "asc" ? "desc" : "asc")">
+                    <a asp-controller="Template" asp-action="Index" asp-route-sortColumn="Title" asp-route-sortOrder="@(Model.SortOrder == "asc" ? "desc" : "asc")" asp-route-viewMode="Table">
                         @localizer["Title"]
                         @if (Model.SortColumn == "Title")
                         {
@@ -39,7 +39,7 @@
                     </a>
                 </th>
                 <th>
-                    <a asp-controller="Template" asp-action="Index" asp-route-sortColumn="Topic" asp-route-sortOrder="@(Model.SortOrder == "asc" ? "desc" : "asc")">
+                    <a asp-controller="Template" asp-action="Index" asp-route-sortColumn="Topic" asp-route-sortOrder="@(Model.SortOrder == "asc" ? "desc" : "asc")" asp-route-viewMode="Table">
                         @localizer["Topic"]
                         @if (Model.SortColumn == "Topic")
                         {
@@ -50,7 +50,7 @@
                     </a>
                 </th>
                 <th>
-                    <a asp-controller="Template" asp-action="Index" asp-route-sortColumn="Author" asp-route-sortOrder="@(Model.SortOrder == "asc" ? "desc" : "asc")">
+                    <a asp-controller="Template" asp-action="Index" asp-route-sortColumn="Author" asp-route-sortOrder="@(Model.SortOrder == "asc" ? "desc" : "asc")" asp-route-viewMode="Table">
                         @localizer["Author"]
                         @if (Model.SortColumn == "Author")
                         {
@@ -61,7 +61,7 @@
                     </a>
                 </th>
                 <th>
-                    <a asp-controller="Template" asp-action="Index" asp-route-sortColumn="Comments" asp-route-sortOrder="@(Model.SortOrder == "asc" ? "desc" : "asc")">
+                    <a asp-controller="Template" asp-action="Index" asp-route-sortColumn="Comments" asp-route-sortOrder="@(Model.SortOrder == "asc" ? "desc" : "asc")" asp-route-viewMode="Table">
                         @localizer["Comments"]
                         @if (Model.SortColumn == "Comments")
                         {
@@ -72,7 +72,7 @@
                     </a>
                 </th>
                 <th>
-                    <a asp-controller="Template" asp-action="Index" asp-route-sortColumn="Likes" asp-route-sortOrder="@(Model.SortOrder == "asc" ? "desc" : "asc")">
+                    <a asp-controller="Template" asp-action="Index" asp-route-sortColumn="Likes" asp-route-sortOrder="@(Model.SortOrder == "asc" ? "desc" : "asc")" asp-route-viewMode="Table">
                         @localizer["Likes"]
                         @if (Model.SortColumn == "Likes")
                         {
@@ -83,7 +83,7 @@
                     </a>
                 </th>
                 <th>
-                    <a asp-controller="Template" asp-action="Index" asp-route-sortColumn="CreatedAt" asp-route-sortOrder="@(Model.SortOrder == "asc" ? "desc" : "asc")">
+                    <a asp-controller="Template" asp-action="Index" asp-route-sortColumn="CreatedAt" asp-route-sortOrder="@(Model.SortOrder == "asc" ? "desc" : "asc")" asp-route-viewMode="Table">
                         @localizer["CreatedAt"]
                         @if (Model.SortColumn == "CreatedAt")
                         {
@@ -114,60 +114,65 @@
 
     <div id="containerTable" class="@(Model.CurrentViewMode == "Table" ? "d-none" : "")">
         <div class="mb-2">
-            <label for="sortColumn">@localizer["SortBy"]:</label>
-            <select id="sortColumn" class="form-select d-inline-block w-auto">
-                @if (Model.SortColumn == "Title")
-                {
-                    <option value="Title" selected>@localizer["Title"]</option>
-                }
-                else
-                {
-                    <option value="Title">@localizer["Title"]</option>
-                }
-                @if (Model.SortColumn == "Topic")
-                {
-                    <option value="Topic" selected>@localizer["Topic"]</option>
-                }
-                else
-                {
-                    <option value="Topic">@localizer["Topic"]</option>
-                }
-                @if (Model.SortColumn == "Author")
-                {
-                    <option value="Author" selected>@localizer["Author"]</option>
-                }
-                else
-                {
-                    <option value="Author">@localizer["Author"]</option>
-                }
-                @if (Model.SortColumn == "Comments")
-                {
-                    <option value="Comments" selected>@localizer["Comments"]</option>
-                }
-                else
-                {
-                    <option value="Comments">@localizer["Comments"]</option>
-                }
-                @if (Model.SortColumn == "Likes")
-                {
-                    <option value="Likes" selected>@localizer["Likes"]</option>
-                }
-                else
-                {
-                    <option value="Likes">@localizer["Likes"]</option>
-                }
-                @if (Model.SortColumn == "CreatedAt")
-                {
-                    <option value="CreatedAt" selected>@localizer["CreatedAt"]</option>
-                }
-                else
-                {
-                    <option value="CreatedAt">@localizer["CreatedAt"]</option>
-                }
-            </select>
-            <button id="sortDirectionBtn" class="btn btn-outline-secondary">
-                @(Model.SortOrder == "asc" ? @localizer["Ascending"] : @localizer["Descending"])
-            </button>
+            <form class="d-flex align-items-center gap-1" asp-controller="Template" asp-action="Index">
+                <label for="sortColumn">@localizer["SortBy"]:</label>
+                <select id="sortColumn" name="sortColumn" class="form-select d-inline-block w-auto">
+                    @if (Model.SortColumn == "Title")
+                    {
+                        <option value="Title" selected>@localizer["Title"]</option>
+                    }
+                    else
+                    {
+                        <option value="Title">@localizer["Title"]</option>
+                    }
+                    @if (Model.SortColumn == "Topic")
+                    {
+                        <option value="Topic" selected>@localizer["Topic"]</option>
+                    }
+                    else
+                    {
+                        <option value="Topic">@localizer["Topic"]</option>
+                    }
+                    @if (Model.SortColumn == "Author")
+                    {
+                        <option value="Author" selected>@localizer["Author"]</option>
+                    }
+                    else
+                    {
+                        <option value="Author">@localizer["Author"]</option>
+                    }
+                    @if (Model.SortColumn == "Comments")
+                    {
+                        <option value="Comments" selected>@localizer["Comments"]</option>
+                    }
+                    else
+                    {
+                        <option value="Comments">@localizer["Comments"]</option>
+                    }
+                    @if (Model.SortColumn == "Likes")
+                    {
+                        <option value="Likes" selected>@localizer["Likes"]</option>
+                    }
+                    else
+                    {
+                        <option value="Likes">@localizer["Likes"]</option>
+                    }
+                    @if (Model.SortColumn == "CreatedAt")
+                    {
+                        <option value="CreatedAt" selected>@localizer["CreatedAt"]</option>
+                    }
+                    else
+                    {
+                        <option value="CreatedAt">@localizer["CreatedAt"]</option>
+                    }
+                </select>
+
+                <input type="hidden" name="sortOrder" value="@(Model.SortOrder == "asc" ? "desc" : "asc")" />
+                <input type="hidden" name="viewMode" value="Card" />
+                <button id="sortDirectionBtn" class="btn btn-outline-secondary">
+                    @(Model.SortOrder == "asc" ? @localizer["Ascending"] : @localizer["Descending"])
+                </button>
+            </form>
         </div>
 
         <div id="cardView" class="row row-cols-1 row-cols-md-3 g-4 @(Model.CurrentViewMode == "Table" ? "d-none" : "")">
@@ -210,19 +215,6 @@
             containerTable.classList.toggle("d-none", isCardView);
 
             toggleViewBtn.innerHTML = isCardView ? '<i class="fa-solid fa-list"></i>' : '<i class="fa-solid fa-table"></i>';
-        });
-
-        sortColumn.addEventListener("change", function () {
-            const sortOrder = sortDirectionBtn.textContent.includes("@localizer["Ascending"]") ? "asc" : "desc";
-            const isCardView = !cardView.classList.contains("d-none");
-            window.location.href = `?sortColumn=${sortColumn.value}&sortOrder=${sortOrder}&viewMode=${isCardView ? 'Card' : 'Table'}`;
-        });
-
-        sortDirectionBtn.addEventListener("click", function () {
-            const sortOrder = sortDirectionBtn.textContent.includes("@localizer["Ascending"]") ? "desc" : "asc";
-            sortDirectionBtn.textContent = sortOrder === "asc" ? "@localizer["Ascending"]" : "@localizer["Descending"]";
-
-            window.location.href = `?sortColumn=${sortColumn.value}&sortOrder=${sortOrder}&viewMode=${isCardView ? 'Card' : 'Table'}`;
         });
     });
 </script>
